--- a/web/static/css/all.css
+++ b/web/static/css/all.css
@@ -155,6 +155,29 @@ section > .list{
 }
 
 
+.fab-container-app-bar-boundary{
+   position: absolute;
+	bottom: 0;
+   right: 1em;
+   align-self: flex-end;
+   padding: 0 !important;
+   transform: translateY(50%);
+}
+
+.fab-container-app-bar-boundary > .fab{
+   display: inline-block;
+   min-height: 2.4em;
+   max-height: 2.4em;
+	min-width: 2.4em;
+	max-width: 2.4em;
+   background-color: var(--accent-color-light) !important;
+}
+
+.fab-container-app-bar-boundary *:hover{
+   cursor: pointer;
+}
+
+
 
 /**
  * Schedule duration output
@@ -227,7 +250,7 @@ li .schedule-duration-output::before{
    color: #009688 !important;
 }
 .active-neutral-container .material-icons, .active-neutral-container .labeled-output{
-   color: #0288D1 !important;
+   color: #C62828 !important;
 }
 .active-false-container .material-icons, .active-false-container .labeled-output{
    color: #C62828 !important;
@@ -240,11 +263,11 @@ li .schedule-duration-output::before{
  */
 .app-bar .mdl-textfield{
 	width: 100%;
-	margin: 0 0.5em;
+	margin: 0 0em;
 }
 .form > .row.mdl-input-row{
 	align-items: center;
-	padding: 0.5em 2em;
+   padding: 0 2em;
 }
 
 
