--- a/web/static/css/common.css
+++ b/web/static/css/common.css
@@ -939,6 +939,13 @@ li .secondary{
 	padding: 1em 2.5em;
 	height: 100%;
 	flex-grow: 0;
+	transition: background-color 0.2s ease;
+}
+.dialog > .flat-button-container > *:hover{
+	background-color: rgba(0, 0, 0, 0.04);
+}
+.dialog > .flat-button-container > *:active{
+	background-color: rgba(0, 0, 0, 0.1);
 }
 .dialog > .flat-button-container > .material-icons{
 	font-size: 1.3em;
